# analysis-view-vscode-extension

./: .eslintrc.js  .gitignore  .vscode-test.js  .vscodeignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
.claude/agents/: product-manager.md  ux-ui-developer.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.husky/: pre-commit
deployment/: README.md  query-engine-service.yaml
deployment/scripts/: bootstrap-terraform.sh  deploy.sh  fix-terraform-imports.sh
deployment/terraform/: main.tf  terraform.tfvars.example
mcp-server/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  main.py  pyproject.toml
mcp-server/proto/: analysis.proto
mcp-server/src/: error.rs  main.rs  mcp_server.rs  query_client.rs
mcp-server/src/mcp_server/: query_client.py  server.py
mcp-server/src/proto/: analysis.rs
mcp-server/tests/: test_server.py
query-engine/: Cargo.toml  Dockerfile  build.rs  diesel.toml
query-engine/migrations/2025-09-21-161107-0000_init_tables/: down.sql  up.sql
query-engine/proto/: analysis.proto
query-engine/src/: catalog.rs  database.rs  datafusion_engine.rs  dataset_manager.rs  domain.rs  engine.rs  error.rs  gcs_client.rs  grpc_server.rs  lib.rs  main.rs  models.rs  schema.rs  storage.rs
query-engine/tests/: ny_taxi_dataset_test.rs
src/: AnalysisViewPlaygroundProvider.ts  CopilotIntegration.ts  McpClient.ts  ReportGenerator.ts  ValidationService.ts  buildPrompt.tsx  extension.ts  types.ts
src/test/: AnalysisViewPlaygroundProvider.test.ts  CopilotIntegration.test.ts  runTest.ts
src/test/suite/: index.ts
tests/: test_e2e.py
