[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC client dependencies
tonic = "0.14"
prost = "0.14"
tonic-build = "0.14"

# Apache Arrow for IPC deserialization
arrow = "56.0"

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

base64 = "0.22"
tonic-prost = "0.14.2"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "mcp-server"
path = "src/main.rs"
