[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Analysis View VS Code Extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.3.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pyarrow>=17.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]