[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Analysis View VS Code Extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pyarrow>=17.0.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.4.0",
    "pandas>=2.3.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1.0",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
