[package]
name = "query-engine-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DataFusion for SQL engine
datafusion = "50.0"

# gRPC dependencies
tonic = "0.14"
prost = "0.14"
tonic-build = "0.14"

reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3.0"
walkdir = "2.0"
base64 = "0.22"
tonic-prost = "0.14.2"
url = "2.5"

# Object Store for GCP/AWS/Azure storage
object_store = { version = "0.12", features = ["gcp", "aws"] }
futures = "0.3"
bytes = "1.0"

# PostgreSQL dependencies
diesel = { version = "2.0", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = "2.0"

[dev-dependencies]
csv = "1.3"
tokio-test = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"

[[bin]]
name = "query-engine"
path = "src/main.rs"
